[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "snakebyte"
description = "A snake bit into a computer byte."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "BSD 3-Clause License"}
keywords = ["snakebyte", "snake-byte", "snake byte", "snake bite"]
authors = [
    { name = "Yuya Honda", email = "yuyahnd.info@gmail.com" }
]
maintainers = [
    { name = "Yuya Honda", email = "yuyahnd.info@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "google-api-python-client=2.111.0",
    "google-auth-httplib2=0.2.0",
    "google-auth-oauthlib=1.2.0",
]

dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest==7.2.1",
    "tox==4.4.4",
]

[project.urls]
"Homepage" = "https://github.com/yuyahnd/snakebyte"
"Bug Tracker" = "https://github.com/yuyahnd/snakebyte/issues"
"Repository" = "https://github.com/yuyahnd/snakebyte.git"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "snakebyte.__version__"}

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
